content/_assets/styles/custom.css
/* ... */
@media print {
  .quire-page.map .quire-page__content {
    max-width: none;
  }  
}


/* PRINT
============================================================================= */
@media print {
  /*  Title page */
  .title-page * {
    max-width: 4.52in;
  }
  .title-page .contributor {
    font-weight: bold;
  }
  .title-page .contributor.additional-contributor {
    display: block;
    font-weight: normal;
    margin-top: 1rem;
  }
  /* Hide objects grid */
  objects-catalog {
    display: none;
  }
  /* Make the History page 2-column */
  #page-history .quire-page__content {
    column-count: 2;
    column-fill: balance;
    column-gap: 0.1875in;
    max-width: 100%;
    margin: 0;
  }
  /* Make catalogue entries run together and tighten spacing and image size to minimize page count*/
  .catalogue-entries-wrapper {
    column-count: 2;
    column-fill: balance;
    column-gap: 0.1875in;
    max-width: 100%;
    margin: 0;
  }
  .catalogue-entries-wrapper .quire-contents .quire-page__content {
    display: none;
  }
  .catalogue-entries-wrapper .quire-page,
  .catalogue-entries-wrapper .quire-page.quire-contents,
  .catalogue-entries-wrapper .quire-page.quire-entry {
    min-height: auto;
    page-break-before: avoid;
    prince-page-group: initial;
    page: initial;
  }
  .catalogue-entries-wrapper .quire-page .quire-page__header,
  .catalogue-entries-wrapper .quire-page.quire-contents .quire-page__header,
  .catalogue-entries-wrapper .quire-page .quire-page__header *,
  .catalogue-entries-wrapper .quire-page.quire-contents .quire-page__header * {
    margin: 0;
    padding: 0;
    text-align: left;
    background-color: transparent;
    color: blue;
    display: inline-block;
    font-size: 1.5rem;
    font-weight: bold;
    display: none;
  }
  .catalogue-entries-wrapper .quire-page .quire-page__header,
  .catalogue-entries-wrapper .quire-page.quire-contents .quire-page__header {
    margin-bottom: 2rem;
  }
  .quire-page.quire-entry .quire-entry__header {
    break-inside: avoid;
    page-break-inside: avoid;
    column-break-inside: avoid;
  }
  .quire-page.quire-entry .quire-page__content {
    column-count: 1;
  }
  .quire-page.quire-entry .quire-entry__image-wrap .q-figure {
    page: initial;
  }
  .quire-page.quire-entry .quire-entry__image-wrap .q-figure {
    display: none;
  }
  .quire-page.quire-entry .quire-entry__image-wrap .q-figure:first-child {
    width: 100%;
    height: auto;
    display: block;
    display: flex;
    justify-content: center;
  }
  .quire-page.quire-entry .quire-entry__image-wrap .q-figure > :first-child {
    height: auto;
    max-height: 300px;
    margin: 0 auto;
  }
  .quire-entry__image-wrap .q-figure .q-figure__caption {
    display: none;
  }
  .quire-page.quire-entry div.side-by-side div.quire-entry__content {
    height: auto;
  }
  .quire-page.quire-entry .quire-page__header__breadcrumbs,
  .quire-page.quire-entry .quire-entry__header .quire-page__header__title {
    padding-top: 0;
  }
  .quire-page.quire-entry .quire-page__header__breadcrumbs {
    margin-top: .25rem;
    color: black;
  }
  .quire-page.quire-entry .quire-page__header__breadcrumbs > span:first-child {
    display: none;
  }
  .quire-page.quire-entry .quire-entry__header,
  .quire-page.quire-entry .quire-entry__tombstone {
    margin: 0;
  }
  .quire-page.quire-entry .quire-entry__tombstone {
    margin-bottom: .75rem;
  }
  .quire-page.quire-entry .quire-entry__tombstone table {
    border-top-width: 0;
    border-bottom-width: .5pt;
  }
  .quire-page.quire-entry .quire-entry__tombstone table td {
    padding: .25rem 0;
  }
  .quire-page.quire-entry .quire-entry__tombstone table tr:last-child td {
    padding-bottom: .875rem;
  } 
  .quire-page.quire-entry .quire-entry__tombstone table td:last-child {
    padding-left: .5rem;
  }
  .quire-page__content__references.backmatter {
    display: none;
  }

  /*Make front and back matter two-column*/
  #page-abbreviations .quire-page__content,
  #page-overview .quire-page__content, #page-intro .quire-page__content, #page-glossary .quire-page__content,
  #page-works-cited .quire-page__content{
    column-count: 2;
    column-fill: balance;
    column-gap: 0.1875in;
    max-width: 100%;
    margin: 0;
  }

  /* Use smaller text an backmatter pages and tighten spacing */
  #page-glossary .quire-page__content,
  #page-works-cited .quire-page__content {
    font-size: .875rem;
  } 
  .quire-page__content .content dl {
    margin-left: 0;
  }
  .quire-page__content .container .content dl dd {
    margin-bottom: .5rem;
  }

  #page-appendix-2 .quire-page__content{
    column-count: 3;
    column-fill: balance;
    column-gap: 0.1875in;
    max-width: 100%;
    margin: 0;
  }

  .q-figure.pdf-float-top {
    float: none;
    -prince-float: top;
    margin-top: 0 !important;
  }
  
  .q-figure.pdf-two-column {
    column-span: all;
  }
  #fig-23-appendix {
    column-span: all;
  }
  
}

/* LOC Cataloguing in Publication format */
.quire-page__content .container .content .cip-data {
  break-inside: avoid;
  page-break-inside: avoid;
}
.quire-page__content .container .content .cip-data p {
  margin-bottom: 0;
}
.quire-page__content .container .content .cip-data ul {
  margin-left: 0;
  margin-top: 0;
  margin-bottom: .5rem;
}
.quire-page__content .container .content .cip-data ul li {
  line-height: 1.6;
  margin: 0;
  padding-left: 1.5em;
  text-indent: -1.5em;
}
.quire-page__content .container .content .cip-data ul li::before {
  display: none;
}
.block-of-text {
  break-inside: avoid;
}



/* Project Team */
.quire-page__content .container .content .project-team ul {
  list-style-type: none;
  margin-left: 0;
  margin-bottom: 1em;
}
.quire-page__content .container .content .project-team ul * {
  margin: 0;
}
.quire-page__content .container .content .project-team ul li::before {
  content: "";
}

